--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'java'
     id 'org.jetbrains.kotlin.jvm' version '1.4.10'
     id 'org.openjfx.javafxplugin' version '0.0.9'
+  //  id 'io.freefair.lombok' version '5.3.0'
 }
 
 group 'sn.esmt.ingc.ro'
@@ -11,11 +12,15 @@ repositories {
     mavenCentral()
 }
 
+
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib"
     testImplementation group: 'junit', name: 'junit', version: '4.13.1'
+ //   classpath 'io.freefair.gradle:lombok-plugin:5.3.0'
 }
-javafx{
+javafx {
     version = "15.0.1"
-    modules = [ 'javafx.controls', 'javafx.fxml']
+    modules = ['javafx.controls', 'javafx.fxml']
 }
+
+//apply plugin: "io.freefair.lombok"
